# ROS2-DynamixelMotorControl

./: README.md
run_motors/: package.xml  setup.cfg  setup.py
run_motors/run_motors/: control_motor.py  test_motors.py
